[package]
name = "gtkelkulator"
version = "0.1.0"
authors = ["Dr. Rich Cordero <rich@corderophilosophy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.0" , features = ["v3_22"] }
gdk = "0.11.0"
gio = "0.7.0"
